trunk/Archive2/02/efd00eb1fa0d60/output
main.cpp:28:10: error: 'commandMap' in 'class Command' does not name a type
 Command::commandMap = {
          ^
main.cpp:40:2: warning: extra ';' [-Wpedantic]
 };
  ^
